base/builds/regulus/argocd/projects/hometheatre/manifests/radarr/Deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: 4000m
            memory: 2Gi
        ports:
        - containerPort: 8989
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /exports/movies
          name: movies-dropzone
        - mountPath: /imports/movies
          name: movies-from-nzbget
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: movies-dropzone
        persistentVolumeClaim:
          claimName: radarr-movies
      - name: movies-from-nzbget
        persistentVolumeClaim:
          claimName: radarr-nzbget-movies
