base/builds/regulus/argocd/projects/hometheatre/manifests/radarr/Service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
  selector:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
  type: ClusterIP
