base/builds/regulus/argocd/projects/hometheatre/manifests/radarr/HTTPRoute-radarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  hostnames:
  - sonarr.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: sonarr
      port: 8989
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
